fix DT-2355, V8 - Folder page text is cut off if the folder is last in the navigation list

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -109,6 +109,11 @@
 	}
 }
 
+// Fix for folder page text so it doesn't cut off if the folder is last in the navigation list.
+.navigation-list .navigation-item:last-child .navigation-list--children {
+   left: initial;
+   right: 0;
+}
 
 // Burger Icon
 // -------------
